Fix: display styles on 'Add module' page have better contrast.
This fixes the add and remove buttons and the display of the pager.

--- a/palettes/tudelft-2012/colorpalette.css
+++ b/palettes/tudelft-2012/colorpalette.css
@@ -177,37 +177,67 @@ input.genericButton[type="submit"], input.button-1[type="submit"], .actionMenuBu
     display: none;
 }
 
+/* Add module buttons */
+.addModule a, .removeModule a {
+    background: none;
+    padding: 4px 9px;
+    color: #fff;
+    min-width: 0;
+}
+.addModule a {
+    background: #529214;
+}
+.addModule a:hover {
+    background: #397114;
+    color: #fff;
+}
+.removeModule a {
+    background: #d12f19;
+}
+.removeModule a:hover {
+    background: #b92b19;
+    color: #fff;
+}
+
 .loggedInAs {
     background: #00a6d6 none;
 }
 
 /* Pager */
-#listContainer .inventory_paging .pagelink {
+#listContainer .inventory_paging .pagelink,
+#moduleList .inventory_paging .pagelink {
     display: inline-block;
     width: 22px;
     height: 22px;
     background: #a5a5a5 url('../../themes/tud_learn/images/small_arrows_white.png') no-repeat;
 }
-#listContainer .inventory_paging .pagelink:hover {
+#listContainer .inventory_paging .pagelink:hover,
+#moduleList .inventory_paging .pagelink:hover {
     background: #666 url('../../themes/tud_learn/images/small_arrows_white.png') no-repeat;
 }
-#listContainer .inventory_paging .pagelink img {
+#listContainer .inventory_paging .pagelink img,
+#moduleList .inventory_paging .pagelink img {
     display: none;
 }
-#listContainer_currentpage_top, #listContainer_currentpage_bot {
+#listContainer_currentpage_top, #listContainer_currentpage_bot,
+#content_listContainer_currentpage_top, #content_listContainer_currentpage_bot {
     color: #666;
 }
-#listContainer_firstpage_top, #listContainer_firstpage_bot {
-    background-position: center -239px;
+#listContainer_firstpage_top, #listContainer_firstpage_bot,
+#content_listContainer_firstpage_top, #content_listContainer_firstpage_bot {
+    background-position: center -239px !important;
 }
-#listContainer_prevpage_top, #listContainer_prevpage_bot {
-    background-position: center -289px;
+#listContainer_prevpage_top, #listContainer_prevpage_bot,
+#content_listContainer_prevpage_top, #content_listContainer_prevpage_bot {
+    background-position: center -289px !important;
 }
-#listContainer_nextpage_top, #listContainer_nextpage_bot {
-    background-position: center -189px;
+#listContainer_nextpage_top, #listContainer_nextpage_bot,
+#content_listContainer_nextpage_top, #content_listContainer_nextpage_bot {
+    background-position: center -189px !important;
 }
-#listContainer_lastpage_top, #listContainer_lastpage_bot {
-    background-position: center -139px;
+#listContainer_lastpage_top, #listContainer_lastpage_bot,
+#content_listContainer_lastpage_top, #content_listContainer_lastpage_bot {
+    background-position: center -139px !important;
 }
 
 /* Tabs */
@@ -242,6 +272,11 @@ div.quickAddPal, div.keyboardAccess {
 .quickAddPal .controls, .keyboardAccess .controls, .comText .controls, .e_expandArea .controls {
     border-top: 0;
     padding: 7px 0 0;
+}
+
+/* Edit mode */
+body.ineditmode {
+    background: #cdcdcd none;
 }
 
 /**
